src/objects/MDO_CategoryBrands__c.object
<CustomObject>
    <description>MDO Junction object for Brand and product category objects</description>
    <fields>
        <fullName>brand_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup with brand object</description>
        <label>Brand Id</label>
        <referenceTo>MDO_Brand__c</referenceTo>
        <relationshipName>CategoryBrands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>brand_mdm_id__c</fullName>
        <externalId>true</externalId>
        <label>Brand MDM Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdm_id__c</fullName>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_Category_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup with product category object</description>
        <label>Product Category Id</label>
        <referenceTo>MDO_Category__c</referenceTo>
        <relationshipLabel>CategoryBrands</relationshipLabel>
        <relationshipName>CategoryBrands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>product_category_mdm_id__c</fullName>
        <externalId>true</externalId>
        <label>Product Category MDM Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>InActive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CategoryBrands</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCB-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CategoryBrands</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>